--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 layout: default
 ---
 
-<h1> some stuff  </h1>
+<div class="jumbotron jumbotron-fluid">
+    <div class="container">
+      <h1 class="display-4">YEG City Critic</h1>
+      <p class="lead">{{ site.description }}</p>
+    </div>
+  </div>
 
-{% include categories.html %}
+<div class="container">
+    {% include category-cards.html %}
+</div>
