#1 Add 5 Categories & Disqus chat

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@ layout: default
   </div>
 
 <div class="container">
+  <h2 class="text-center">Feel free to Chime in!</h2>
     {% include category-cards.html %}
 </div>
