Add Images and Styling

--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 ---
 ---
-
-<div class="jumbotron jumbotron-fluid">
+<div class="jumbotron jumbotron-fluid" id="hero">
     <div class="container">
-      <h1 class="display-4">YEG City Critic</h1>
-      <p class="lead">{{ site.description }}</p>
+      <h1 class="display-4 text-light">{{ site.title }}</h1>
+      <p class="lead text-light">{{ site.description }}</p>
     </div>
   </div>
 
